{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 16,
  "lineage": "fa9a65e8-4eb5-80fd-8307-25b2754955af",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "jenkinsnic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/networkInterfaces/jenkins-nic",
            "internal_domain_name_suffix": "0iqj250jzkeupj1mrmpym052jf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/publicIPAddresses/jenkins-public-ip",
                "subnet_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/virtualNetworks/cicdproject-network/subnets/internal"
              }
            ],
            "location": "westeurope",
            "name": "jenkins-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "binod-project-rg"
          },
          "dependencies": [
            "azurerm_public_ip.jenkinspublicip",
            "azurerm_resource_group.cicdproject",
            "azurerm_subnet.cisubnet",
            "azurerm_virtual_network.cinetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "webservernic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/networkInterfaces/webserver-nic",
            "internal_domain_name_suffix": "0iqj250jzkeupj1mrmpym052jf.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/publicIPAddresses/webserver-public-ip",
                "subnet_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/virtualNetworks/cicdproject-network/subnets/internal"
              }
            ],
            "location": "westeurope",
            "name": "webserver-nic",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "binod-project-rg"
          },
          "dependencies": [
            "azurerm_public_ip.webserverpublicip",
            "azurerm_resource_group.cicdproject",
            "azurerm_subnet.cisubnet",
            "azurerm_virtual_network.cinetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "jenkinsnsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/networkInterfaces/jenkins-nic|/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/networkSecurityGroups/cicdproject-nsg",
            "network_interface_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/networkInterfaces/jenkins-nic",
            "network_security_group_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/networkSecurityGroups/cicdproject-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.jenkinsnic",
            "azurerm_network_security_group.cicdproject",
            "azurerm_public_ip.jenkinspublicip",
            "azurerm_resource_group.cicdproject",
            "azurerm_subnet.cisubnet",
            "azurerm_virtual_network.cinetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "webservernsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/networkInterfaces/webserver-nic|/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/networkSecurityGroups/cicdproject-nsg",
            "network_interface_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/networkInterfaces/webserver-nic",
            "network_security_group_id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/networkSecurityGroups/cicdproject-nsg"
          },
          "dependencies": [
            "azurerm_network_interface.webservernic",
            "azurerm_network_security_group.cicdproject",
            "azurerm_public_ip.webserverpublicip",
            "azurerm_resource_group.cicdproject",
            "azurerm_subnet.cisubnet",
            "azurerm_virtual_network.cinetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "cicdproject",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/networkSecurityGroups/cicdproject-nsg",
            "location": "westeurope",
            "name": "cicdproject-nsg",
            "resource_group_name": "binod-project-rg",
            "security_rule": [],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.cicdproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allout",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/networkSecurityGroups/cicdproject-nsg/securityRules/web",
            "name": "web",
            "network_security_group_name": "cicdproject-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "binod-project-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.cicdproject",
            "azurerm_resource_group.cicdproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "sshd",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/networkSecurityGroups/cicdproject-nsg/securityRules/sshd",
            "name": "sshd",
            "network_security_group_name": "cicdproject-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "binod-project-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.cicdproject",
            "azurerm_resource_group.cicdproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/networkSecurityGroups/cicdproject-nsg/securityRules/web",
            "name": "web",
            "network_security_group_name": "cicdproject-nsg",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "binod-project-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.cicdproject",
            "azurerm_resource_group.cicdproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "jenkinspublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/publicIPAddresses/jenkins-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "jenkins-public-ip",
            "resource_group_name": "binod-project-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.cicdproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "webserverpublicip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/publicIPAddresses/webserver-public-ip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "webserver-public-ip",
            "resource_group_name": "binod-project-rg",
            "sku": "Basic",
            "sku_tier": "Regional"
          },
          "dependencies": [
            "azurerm_resource_group.cicdproject"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "cisubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/virtualNetworks/cicdproject-network/subnets/internal",
            "name": "internal",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "binod-project-rg",
            "virtual_network_name": "cicdproject-network"
          },
          "dependencies": [
            "azurerm_resource_group.cicdproject",
            "azurerm_virtual_network.cinetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "cinetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "7f9e20d2-ca49-4789-a76c-8b1f866bfc4d",
            "id": "/subscriptions/ea6e6692-4d05-4c5b-9909-51c7dc5f5c2b/resourceGroups/binod-project-rg/providers/Microsoft.Network/virtualNetworks/cicdproject-network",
            "location": "westeurope",
            "name": "cicdproject-network",
            "resource_group_name": "binod-project-rg"
          },
          "dependencies": [
            "azurerm_resource_group.cicdproject"
          ]
        }
      ]
    }
  ]
}